WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23966
REGRESSION: Custom arrow navigation functionality doesn't work at dropular.net
https://bugs.webkit.org/show_bug.cgi?id=23966
Summary
REGRESSION: Custom arrow navigation functionality doesn't work at dropular.net
Jesse
Reported
2009-02-15 07:24:29 PST
I think this is javascript-related, but I'm not sure. On this website you can navigate posts by using the up/down arrows and you can navigate pages (forward/back) using the left/right arrows (see the top right of the page for explanation). The left/right functionality works, but the up/down does not anymore. I just noticed this in the
r40957
build from 2009-02-13.
Attachments
patch
(4.45 KB, patch)
2009-03-18 12:49 PDT
,
Sam Weinig
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2009-02-15 23:28:16 PST
Confirmed as a regression with
r41016
.
Alexey Proskuryakov
Comment 2
2009-02-15 23:29:19 PST
<
rdar://problem/6589657
>
Alexey Proskuryakov
Comment 3
2009-03-13 02:25:05 PDT
The problem here is with a broken getBoundingClientRect implementation, which jQuery decides to use when available. Try e.g. javascript:alert(document.getElementById("drop7").getBoundingClientRect().top)
Sam Weinig
Comment 4
2009-03-18 12:49:25 PDT
Created
attachment 28728
[details]
patch
Sam Weinig
Comment 5
2009-03-18 13:08:28 PDT
Fixed in
r41811
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug