WebCore:

2009-03-18  Sam Weinig  <sam@webkit.org>

        Reviewed by Simon Fraser.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=23966
        REGRESSION: Custom arrow navigation functionality doesn't work at dropular.net
        <rdar://problem/6589657>

        Match the CSSOM spec for getClientRects and getBoundingClientRect by
        returning a 0x0 rect at the correct top/left position for empty inline
        boxes.

        * rendering/RenderInline.cpp:
        (WebCore::RenderInline::absoluteRects):
        (WebCore::RenderInline::absoluteQuads):

LayoutTests:

2009-03-18  Sam Weinig  <sam@webkit.org>

        Reviewed by Simon Fraser.

        Update test results for https://bugs.webkit.org/show_bug.cgi?id=23966
        REGRESSION: Custom arrow navigation functionality doesn't work at dropular.net
        <rdar://problem/6589657>

        * fast/dom/getBoundingClientRect-expected.txt:
        * fast/dom/getClientRects-expected.txt:



Canonical link: https://commits.webkit.org/33868@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41811 268f45cc-cd09-0410-ab3c-d52691b4dbfc